kubernetes-manifests/infra/grafana/grafana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: infra
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.donat.im
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
